syntax = "proto2";
option go_package = "./orderinfo";

message OrderInfoReq {
    required int64 order_id = 1;
}

message OrderInfoRsp {
    required int64 order_id = 1;
    required string price = 2;
    required string desc = 3;
    required int64 user_id = 4;
}

// 订单
message GetAllReq{}


service OrderInfoService {
    rpc GetOrderInfo(OrderInfoReq) returns (OrderInfoRsp);
    // 服务端流模式
    rpc GetAll(GetAllReq) returns (stream OrderInfoRsp);
}
